# anovabar

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: release.yml
docs/: cli.mdx  docs.json  index.mdx  menu-bar-app.mdx  quickstart.mdx  releasing.mdx
macos/: anovabar-cli-Info.plist  build-app-icon.sh  build-cli-app.sh  build-menubar-app.sh  install-cli.sh
macos/AnovaBar/: Package.swift  README.md
macos/AnovaBar/Resources/: Info.plist
macos/AnovaBar/Sources/AnovaBar/: AnovaBLECoordinator.swift  AnovaBarApp.swift  AnovaDeviceSupport.swift  AppModel.swift  MenuBarContentView.swift  MiniBLEClient.swift  MiniBLEProtocol.swift  MiniCookStateMachine.swift  MiniDiagnostics.swift  NanoBLEClient.swift  NanoBLEProtocol.swift  OriginalBLEClient.swift  OriginalBLEProtocol.swift
macos/AnovaBar/Tests/AnovaBarTests/: MiniCookStateMachineTests.swift  MiniSnapshotTests.swift  NanoBLEProtocolTests.swift  OriginalBLEProtocolTests.swift
proto/: messages.proto
scripts/: notarize-macos-apps.sh  package-homebrew-source.sh  package-release.sh  release  sync-version.sh
src/: error.rs  lib.rs  main.rs  types.rs
src/backend/: mini.rs  mod.rs  nano.rs  original.rs
src/protocol/: codec.rs  command.rs  messages.rs  mini.rs  mod.rs
src/transport/: mod.rs
src/transport/ble/: mod.rs  profile.rs
