[package]
name = "anovabar"
version = "0.1.3"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "anovabar"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
btleplug = "0.11"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
prost = "0.13"
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = "1"
